ML generative models

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -85,6 +85,7 @@
 \newcommand{\VA}{{\mathbb E}}
 \newcommand{\btheta}{{\boldsymbol{\theta}}}
 \newcommand{\bomega}{{\boldsymbol{\omega}}}
+\newcommand{\bmu}{{\boldsymbol{\mu}}}
 \newcommand{\N}{{\mathbb N}}
 \newcommand{\quat}{{\mathbb H}}
 \newcommand{\C}{{\mathbb C}}
