Add motor dynamical model section and diagram
Introduced a new subsection on the dynamical model of the motor in the LaTeX source. Added a corresponding autosave IPE diagram illustrating torque variation, and updated the PDF output.

--- a/Robotics 1/LatexSourceFile/Robotics1.tex
+++ b/Robotics 1/LatexSourceFile/Robotics1.tex
@@ -824,4 +824,5 @@ $\bar i$
         \end{figure}
     \end{center}
 The greater the number of coils included, the more the torque ''flattens out'', tending towards a constant behavior.
+\subsection{Dynamical Model of the Motor}
 \end{document}
